--- a/css/components.css
+++ b/css/components.css
@@ -71,7 +71,7 @@
   overflow-x: auto;
   scrollbar-width: none;
   -ms-overflow-style: none;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .wallet-tabs::-webkit-scrollbar { display: none; }
